5. In proiectul Nume_Pren_Lab7 adaugam o pagina de tip ContentPage. In fereastra Solution Explorer facem click dreapta pe numele proiectului Nume_Pren_Lab7, selectam Add->New Item si din categoria .NETMAUI alegem ContentPage pe care o denumim ShopEntryPage.xaml.

--- a/Milea_Petrica_Lab7.csproj
+++ b/Milea_Petrica_Lab7.csproj
@@ -66,6 +66,9 @@
 	  <MauiXaml Update="ProductPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="ShopEntryPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
