--- a/Milea_Petrica_Lab7.csproj
+++ b/Milea_Petrica_Lab7.csproj
@@ -69,6 +69,9 @@
 	  <MauiXaml Update="ShopEntryPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="ShopPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
